--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 # Project name and version
-project(TerminalSnake VERSION 1.0)
+project(TerminalSpaceShooter VERSION 1.0)
 
 # Use C++17
 set(CMAKE_CXX_STANDARD 17)
@@ -10,23 +10,29 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 # Set source and header files
 set(SOURCES
     src/main.cpp
-    src/ultils.cpp
-    src/snake.cpp
+    src/utils.cpp
+    src/cursor_input.cpp
     src/color.cpp
-    src/brick.cpp
+    src/space_ship.cpp
+    src/bullet.cpp
+    src/game_logic.cpp
+    src/asteroid.cpp
 )
 
 set(HEADERS
-    src/headers/snake.hpp
-    src/headers/ultils.hpp
+    src/headers/utils.hpp
+    src/headers/cursor_input.hpp
     src/headers/color.hpp
-    src/headers/brick.hpp
+    src/headers/space_ship.hpp
+    src/headers/bullet.hpp
+    src/headers/game_logic.hpp
+    src/headers/asteroid.hpp
 )
 
 # Exe
-add_executable(Snake ${SOURCES} ${HEADERS})
+add_executable(SpaceShooter ${SOURCES} ${HEADERS})
 
-target_include_directories(Snake PRIVATE src/headers)
+target_include_directories(SpaceShooter PRIVATE src/headers)
 
 # Optional: copy asset folder into build dir
 file(COPY assets DESTINATION ${CMAKE_BINARY_DIR})
